# playground

./: .pre-commit-config.yaml  Makefile  README.md  build-venv  playground.py  pyproject.toml  tasks.py
.github/workflows/: publishing.yml  python.yml  testing.yml
