[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peberanek-playground"
version = "0.0.2"
authors = [
  { name = "Petr Beranek", email = "petrberanek.mail@gmail.com" },
]
description = "A playground for testing Python packaging and CI related stuff"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["CI", "automation", "packaging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
development = [
  "invoke==2.1.2",
  "pre-commit==3.3.1",
  "pytest==7.3.1",
  "build==0.10.0",
  "twine==4.0.2"
]

[project.scripts]
playground = "playground:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "C90", # mccabe
  "I",   # isort
]
# disable autofix; use e.g. "F" to skip a whole category
unfixable = ["F401", "F841"]
